--- a/src/frontend/webpack/index.html
+++ b/src/frontend/webpack/index.html
@@ -19,7 +19,7 @@
         <input
           type="text"
           class="mdc-text-field__input"
-          aria-labelledby="UserFormName"
+          aria-labelledby="AddUserName"
           id="AddUserName"
         />
         <span class="mdc-notched-outline">
@@ -34,7 +34,7 @@
         <input
           type="text"
           class="mdc-text-field__input"
-          aria-labelledby="UserFormEmail"
+          aria-labelledby="AddUserEmail"
           id="AddUserEmail"
         />
         <span class="mdc-notched-outline">
@@ -59,28 +59,31 @@
         <input
           type="text"
           class="mdc-text-field__input"
-          aria-labelledby="my-label-id3"
+          aria-labelledby="AddWatcherUserID"
+          id = "AddWatcherUserID"
         />
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label" id="my-label-id3"
+            <span class="mdc-floating-label" 
               >Your User ID</span
             >
           </span>
           <span class="mdc-notched-outline__trailing"></span>
         </span>
       </label>
+
       <label class="mdc-text-field mdc-text-field--outlined">
         <input
           type="text"
           class="mdc-text-field__input"
-          aria-labelledby="my-label-id4"
+          aria-labelledby="AddWatcherUrl"
+          id = "AddWatcherUrl"
         />
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label" id="my-label-id4"
+            <span class="mdc-floating-label" 
               >Watcher URL</span
             >
           </span>
@@ -92,20 +95,21 @@
         <input
           type="text"
           class="mdc-text-field__input"
-          aria-labelledby="my-label-id4"
+          aria-labelledby="AddWatcherFrequency"
+          id="AddWatcherFrequency"
         />
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
-            <span class="mdc-floating-label" id="my-label-id4"
+            <span class="mdc-floating-label" 
               >Watcher Frequency (sec)</span
             >
           </span>
-          <span class="mdc-notched-outline__trailing"></span>
+          <span class="mdc-notched-outline__trailing" ></span>
         </span>
       </label>
 
-      <button class="mdc-button">
+      <button class="mdc-button" id="AddWatcherButton">
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label">Submit</span>
       </button>
@@ -270,7 +274,7 @@
         </button>
 
         <div class="table mdc-data-table">
-          <table class="mdc-data-table__table" aria-label="Users">
+          <table id= "WatchersTable" class="mdc-data-table__table" aria-label="WatchersTable">
             <thead>
               <tr class="mdc-data-table__header-row">
                 <th
@@ -312,7 +316,7 @@
             <tbody class="mdc-data-table__content">
               <tr id="Watcher3" class="mdc-data-table__row">
                 <td class="mdc-data-table__cell">Felix</td>
-                <td class="mdc-data-table__cell">http://www.youtube.com</td>
+                <td class="mdc-data-table__cell"><a href="http://www.youtube.com">http://www.youtube.com</a></td>
                 <td class="mdc-data-table__cell mdc-data-table__cell--numeric">
                   4
                 </td>
@@ -329,6 +333,7 @@
           </table>
         </div>
 
+      <div id="WatcherMenus">
         <div id="3" class="WatcherMenu mdc-menu mdc-menu-surface">
           <ul
             class="mdc-list"
@@ -343,6 +348,7 @@
             </li>
           </ul>
         </div>
+      </div>
       </div>
     </div>
 
