--- a/src/frontend/webpack/index.html
+++ b/src/frontend/webpack/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+
     <div id="UserForm" class="form">
       <a id="UserFormCloseButton" class="closebtn" href="javascript:void(0)"
         >&times;</a
@@ -52,6 +53,21 @@
     </div>
 
     <div id="WatcherForm" class="form">
+
+
+      <div id="loading" role="progressbar" class="mdc-linear-progress mdc-linear-progress--indeterminate" aria-label="Example Progress Bar" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
+        <div class="mdc-linear-progress__buffer">
+          <div class="mdc-linear-progress__buffer-bar"></div>
+          <div class="mdc-linear-progress__buffer-dots"></div>
+        </div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+          <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+          <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
+      </div>
+      
       <a id="WatcherFormCloseButton" class="closebtn" href="javascript:void(0)"
         >&times;</a
       >
@@ -113,6 +129,9 @@
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label">Submit</span>
       </button>
+
+
+      
     </div>
 
     <div id="main">
