added delete users

--- a/src/frontend/webpack/index.html
+++ b/src/frontend/webpack/index.html
@@ -53,8 +53,6 @@
     </div>
 
     <div id="WatcherForm" class="form">
-
-
       <div id="loading" role="progressbar" class="mdc-linear-progress mdc-linear-progress--indeterminate" aria-label="Example Progress Bar" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
         <div class="mdc-linear-progress__buffer">
           <div class="mdc-linear-progress__buffer-bar"></div>
@@ -67,7 +65,7 @@
           <span class="mdc-linear-progress__bar-inner"></span>
         </div>
       </div>
-      
+
       <a id="WatcherFormCloseButton" class="closebtn" href="javascript:void(0)"
         >&times;</a
       >
@@ -128,10 +126,7 @@
       <button class="mdc-button" id="AddWatcherButton">
         <div class="mdc-button__ripple"></div>
         <span class="mdc-button__label">Submit</span>
-      </button>
-
-
-      
+      </button>      
     </div>
 
     <div id="main">
@@ -267,7 +262,7 @@
               aria-orientation="vertical"
               tabindex="-1"
             >
-              <li class="mdc-list-item" role="menuitem">
+              <li class="deleteUser mdc-list-item" role="menuitem">
                 <span class="material-icons">delete</span>
                 <span class="mdc-list-item__text">Delete</span>
               </li>
@@ -361,7 +356,7 @@
             aria-orientation="vertical"
             tabindex="-1"
           >
-            <li class="mdc-list-item" role="menuitem">
+            <li class="deleteWatcher mdc-list-item" role="menuitem">
               <span class="material-icons">delete</span>
               <span class="mdc-list-item__text">Delete</span>
             </li>
