template pass address to js

--- a/src/frontend/webpack/index.html
+++ b/src/frontend/webpack/index.html
@@ -367,5 +367,6 @@
     </div>
 
     <script src="bundle.js" async></script>
+    <div id="configureAddress">http://0.0.0.0:8004</div>
   </body>
 </html>
