--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -25,12 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Watcher</title>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   </head>
 
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
