--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -25,12 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.ico" />
     <title>Web Watcher</title>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   </head>
